tests/export_type/export_type.exp
Error ------------------------------------------------------------------------------------------------ importer.js:11:23

Cannot assign `'asdf'` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   importer.js:11:23
   11| var b: inlinedType1 = 'asdf'; // Error: string ~> number
                             ^^^^^^ [1]

References:
   importer.js:11:8
   11| var b: inlinedType1 = 'asdf'; // Error: string ~> number
              ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:14:26

Cannot assign `'asdf'` to `d` because string [1] is incompatible with number [2]. [incompatible-type]

   importer.js:14:26
   14| var d: standaloneType1 = 'asdf'; // Error: string ~> number
                                ^^^^^^ [1]

References:
   importer.js:14:8
   14| var d: standaloneType1 = 'asdf'; // Error: string ~> number
              ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:17:18

Cannot assign `'asdf'` to `f` because string [1] is incompatible with number [2]. [incompatible-type]

   importer.js:17:18
   17| var f: talias1 = 'asdf'; // Error: string ~> number
                        ^^^^^^ [1]

References:
   importer.js:17:8
   17| var f: talias1 = 'asdf'; // Error: string ~> number
              ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:20:18

Cannot assign `'asdf'` to `h` because string [1] is incompatible with number [2]. [incompatible-type]

   importer.js:20:18
   20| var h: talias3 = 'asdf'; // Error: string ~> number
                        ^^^^^^ [1]

References:
   importer.js:20:8
   20| var h: talias3 = 'asdf'; // Error: string ~> number
              ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:24:18

Cannot assign `'asdf'` to `j` because string [1] is incompatible with number [2]. [incompatible-type]

   importer.js:24:18
   24| var j: talias4 = 'asdf'; // Error: string ~> number
                        ^^^^^^ [1]

References:
   importer.js:24:8
   24| var j: talias4 = 'asdf'; // Error: string ~> number
              ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:29:22

Cannot assign object literal to `l` because string [1] is incompatible with number [2] in property `prop`.
[incompatible-type]

   importer.js:29:22
   29| var l: IFoo = {prop: 'asdf'}; // Error: {prop:string} ~> {prop:number}
                            ^^^^^^ [1]

References:
   types_only.js:15:31
   15| export interface IFoo { prop: number };
                                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ importer.js:32:23

Cannot assign object literal to `n` because number [1] is incompatible with string [2] in property `prop`.
[incompatible-type]

   importer.js:32:23
   32| var n: IFoo2 = {prop: 42}; // Error: {prop:number} ~> {prop:string}
                             ^^ [1]

References:
   types_only2.js:5:32
    5| export interface IFoo2 { prop: string };
                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- importer.js:41:5

Cannot reference type `ClsType` [1] from a value position. [type-as-value]

   importer.js:41:5
   41| new ClsType();
           ^^^^^^^

References:
   importer.js:40:21
   40| import type {Cls as ClsType} from './values_as_type_exports';
                           ^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- importer.js:43:2

Cannot cast `5` to `ClsType` because number [1] is incompatible with `Cls` [2]. [incompatible-cast]

   importer.js:43:2
   43| (5: ClsType);
        ^ [1]

References:
   importer.js:43:5
   43| (5: ClsType);
           ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- types_only.js:5:23

Cannot assign `'asdf'` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   types_only.js:5:23
   5| var b: inlinedType1 = 'asdf'; // Error: string ~> number
                            ^^^^^^ [1]

References:
   types_only.js:5:8
   5| var b: inlinedType1 = 'asdf'; // Error: string ~> number
             ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- types_only.js:11:9

Cannot reference type `standaloneType2` [1] from a value position. [type-as-value]

   types_only.js:11:9
   11| export {standaloneType2}; // Error: Missing `type` keyword
               ^^^^^^^^^^^^^^^

References:
   types_only.js:10:6
   10| type standaloneType2 = number;
            ^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- values_as_type_exports.js:4:14

Cannot export the value `num` as a type. [export-value-as-type]

   4| export type {num};
                   ^^^


Error ----------------------------------------------------------------------------------- values_as_type_exports.js:7:14

Cannot export the value `fun` as a type. [export-value-as-type]

   7| export type {fun}
                   ^^^



Found 13 errors
